--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/UserComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/UserComponent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/user"
 @using FeirasEspinhoBlazorApp.SourceCode.Utilizadores;
 @using FeirasEspinhoBlazorApp.SourceCode.WebClasses;
+@using FeirasEspinhoBlazorApp.Pages.PagesFeira;
 @using System.Text.Json;
 @inject NavigationManager navigationManager
 
