--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeirasComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeirasComponent.razor
@@ -1,6 +1,7 @@
-﻿@page "/showfeiras"
+﻿@page "/showfeiras/{emailCL}"
 @using SourceCode.WebClasses;
 @using SourceCode.Feiras;
+@using SourceCode;
 @using System.Text.Json;
 @using FeirasEspinhoBlazorApp.Pages.PagesLeilao;
 @inject NavigationManager navigationManager
@@ -9,7 +10,7 @@
 
 @if(showFeira)
 {
-	<ShowFeiraStandsComponent idFeira="@feiraSelecionada"/>
+	<ShowFeiraStandsComponent idFeira="@feiraSelecionada" emailCL="@emailCL"/>
 }
 else if (showLeilao)
 {
@@ -61,6 +62,8 @@ else
 
 @code
 {
+	[Parameter, EditorRequired]
+	public string emailCL { get; set; }
 	private Table<Feira> tabelContent;
 	private int erro = 0;
 	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
@@ -71,14 +74,9 @@ else
 	protected override void OnInitialized()
 	{
 		showFeiras = this;
+		List<Feira> feiras = SistemaFeiras.GetInstance().MapFeiras.Values.ToList();
 		List<(Feira, int)> conteudo = new List<(Feira, int)>();
-		conteudo.Add((new Feira(1, "abc", DateTime.Now, null, 20.0f, "abc", 1), 2));
-		conteudo.Add((new Feira(2, "def", DateTime.Now, null, 30.0f, "def", 1), 3));
-		conteudo.Add((new Feira(3, "ghi", DateTime.Now, null, 40.0f, "ghi", 1), 4));
-		conteudo.Add((new Feira(4, "jkl", DateTime.Now, null, 50.0f, "jkl", 1), 5));
-		conteudo.Add((new Feira(5, "mno", DateTime.Now, null, 60.0f, "mno", 1), 3));
-		conteudo.Add((new Feira(6, "pqr", DateTime.Now, null, 70.0f, "stu", 1), 3));
-		conteudo.Add((new Feira(7, "stu", DateTime.Now, null, 80.0f, "stu", 1), 3));
+		feiras.ForEach(f => conteudo.Add((f, 0)));
 		this.tabelContent = new Table<Feira>(conteudo);
 		codigosErro[1] = "Nenhuma feira selecionada";
 	}
