--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowNegociacoesComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowNegociacoesComponent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/shownegociacoes/{email}"
 @using SourceCode.Vendas;
 @using SourceCode.WebClasses;
+@using SourceCode;
 
 <PageTitle>Negociações</PageTitle>
 @if(showNegociation)
@@ -10,6 +11,14 @@
 else
 {
 	<h3>Negociações</h3>
+	@if (erro != 0)
+	{
+		<WarningComponent mensagem="@codigosErro[erro]" sucess="false" page="5" />
+	}
+	else if (sucess)
+	{
+		<WarningComponent mensagem="@sucessMessage" sucess="true" page="5" />
+	}
 	<div class="tableFixHead">
 		<table>
 			<thead>
@@ -42,15 +51,17 @@ else
 	private bool showNegociation;
 	private int idVenda;
 	private static ShowNegociacoesComponent showNegociacoes;
-
+	private int erro;
+	private bool sucess;
+	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
+	private string sucessMessage;
 	protected override void OnInitialized()
 	{
+		codigosErro[0] = "Negociação não registada";
+		List<Venda> negociacaos = SistemaFeiras.GetInstance().GetNegociacoes(email);
+		negociacaos.Add(new Venda(1, DateTime.Now, 20.0f, "abc", 1, 2, 3));
+		table = new Table<Venda>(negociacaos);
 		// public Venda(int idVenda, DateTime data, float preco, string emailCliente, int idFeira, int negociacao, int idStand)
-		List<Venda> l = new List<Venda>
-		{
-			new Venda(1,DateTime.Now,20.0f, "abc", 1, 2,3)
-		};
-		table = new Table<Venda>(l);
 		showNegociacoes = this;
 	}
 	public static ShowNegociacoesComponent GetInstance()
@@ -69,6 +80,25 @@ else
 	public void GetBack()
 	{
 		showNegociation = false;
+		erro = 0;
+		sucess = false;
+		StateHasChanged();
+	}
+
+	public void GetBack(int erro)
+	{
+		showNegociation = false;
+		this.erro = erro;
+		sucess = false;
+		StateHasChanged();
+	}
+
+	public void GetBack(string message)
+	{
+		showNegociation = false;
+		erro = 0;
+		sucess = true;
+		sucessMessage = message;
 		StateHasChanged();
 	}
 }
