--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
@@ -1,5 +1,7 @@
 ﻿@page "/fastpurchase"
 @inject NavigationManager navigation;
+@using SourceCode;
+@using SourceCode.Vendas;
 
 <PageTitle>Compra rápida</PageTitle>
 <h3>Compra rápida</h3>
@@ -17,11 +19,14 @@
 	</div>
 </div>
 
-@code 
+@code
 {
+	[Parameter, EditorRequired]
+	public Venda venda  { get; set; }
 	private string numeroCartao = "";
 	public void Confirmar()
 	{
+		SistemaFeiras.GetInstance().AddVenda(venda);
 		ShowStandComponent showStandComponent = ShowStandComponent.GetInstance();
 		showStandComponent.ShowStand("Compra registada");
 
