--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/showleiloescliente/{emailCL}"
+﻿@page "/showleiloesuser/{emailCL}"
 
 <ShowLeiloesComponent idFeira="0" emailCL="@emailCL" idStand="-1"/>
 
