--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
@@ -57,7 +57,7 @@
     }
     public void Logout()
     {
-        NavBar.GetInstance().LogoutCL();
+        NavBar.GetInstance().Logout();
         show = false;
         LoginComponent loginComponent = LoginComponent.GetInstace();
         loginComponent.Logout();
