Start testing the connection between the web pages and the database. I will adpat this in the future in order to use the "sistemaFeira" class.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/CreateACCComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/CreateACCComponent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/createacc"
 @using SourceCode.Utilizadores;
 @using SourceCode;
+@using Data;
 @inject NavigationManager navigationManager;
 
 <PageTitle>Página de criação de conta</PageTitle>
@@ -144,8 +145,9 @@
 			{
 				try
 				{
-					SistemaFeiras sistema = SistemaFeiras.GetInstance();
-					sistema.Registo(utilizador);
+					UtilizadoresDAO.GetInstance().Insert(utilizador);
+					//SistemaFeiras sistema = SistemaFeiras.GetInstance();
+					//sistema.Registo(utilizador);
 					this.sucess = true;
 					this.LimpaCampos();
 				}
