Start adapting the facade in order to use our SQL Server database instead of Dictionaries.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
@@ -80,7 +80,7 @@ else
 			SistemaFeiras sistemaFeiras = SistemaFeiras.GetInstance();
 			try
 			{
-				Utilizador? user = UtilizadoresDAO.GetInstance().GetUtilizador(email);//sistemaFeiras.Login(email, password);
+				Utilizador? user = sistemaFeiras.Login(email, password);
 				if(user != null)
 				{
 					switch (user.GetType().Name)
