--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
@@ -17,7 +17,7 @@ else
 		<br />
 		<div>
 			<label><b>Id Feira</b></label>
-			<input type="text" class="tb" id="feira" name="feira" placeholder="Insira o seu nome de utilizador" @bind-value="idFeira" readonly="readonly" />
+			<input type="text" class="tb" id="feira" name="feira" @bind-value="idFeira" readonly="readonly" />
 		</div>
 		<div>
 			<label><b>Id Stand</b></label>
